LMS.App/ClientApp/src/styles.css
/* ... */
.feed-box-preview {
  min-height: 320px;
  max-height: 320px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  background: #000;
}
.live-chat-box.live-chat-padding {
  padding: 25px 20px;
}
@media screen and (min-width: 1200px) {
  .main_content-max-width {
    max-width: 1200px;
    margin: 0 auto;
  }
  .liveStream {
    margin-left: 300px;
    height: 800px;
  }
}

@media screen and (min-width: 1281px) {
  .sidemenu.d-xl-block {
    display: block !important;
  }
}

@media (max-width: 1440px) {
  .main_content {
    padding-left: 315px !important;
  }
  .main_content {
    padding: 40px 25px;
  }
  .livechat-box {
    margin: 0 5px 0 0;
  }
  .live-chat-box {
    padding: 29px 25px;
  }
}

@media screen and (max-width: 1280px) {
  .font_39 {
    font-size: 36px;
  }
  .landing-section {
    padding: 75px 35px;
  }
  .sidemenu {
    left: auto;
    right: 0;
    background: #fff;
    width: 100%;
    min-width: 320px;
    box-shadow: 0px 0px 16px #00000026;
    transition: 0.5s all;
    z-index: 9999;
  }
  .language-btn .btn-outline-primary,
  .language-btn .btn-outline-primary:hover {
    padding: 5px 20px;
  }
  .language-btn .font_16 {
    font-size: 15px !important;
  }
  .post-bot-right .lg_btn {
    width: 210px !important;
  }
  .sidemenu.d-none {
    display: none !important;
  }
  .logo_mobile.d-xl-none {
    display: block !important;
  }
  .logo_mobile.d-xl-none ~ .d-xl-none.d-flex {
    display: flex !important;
  }
  .create-post-header.d-xl-flex {
    display: none !important;
  }
  button.back-button.d-xl-none {
    display: block !important;
  }
  .sidemenu .closebtn.d-xl-none {
    display: inline-block !important;
  }
  .main_content {
    padding-left: 25px !important;
  }
  .main_content {
    padding: 40px 25px;
  }
}

@media screen and (max-width: 991px) {
  .landing-left {
    padding-top: 20px;
  }
  .font_39 {
    font-size: 30px;
  }
  .landing-section {
    padding: 48px 59px;
  }
  .School-prof-header .school-profile-icon {
    width: 180px;
    height: 180px;
    min-width: 180px;
  }
  .font_24 {
    font-size: 22px;
  }
  .followers_name {
    margin-bottom: 10px;
  }
  /*---- new media start here ---*/
  .certi-template-select li {
    width: 50%;
  }
  .livechat-box {
    max-width: 100%;
    margin-top: 45px;
  }
}
/* ... */

